--- a/index.html
+++ b/index.html
@@ -22,23 +22,9 @@
                 <ul class="menu">
                     <li class="logo">
                         <a href="#">
-                            <h1>Rita<br>Correia</h1>
+                            <h1>Rita<br>Correia.</h1>
                         </a>
                     </li>
-                    <li class="item"><a href="#About">About</a></li>
-                    <li class="item has-submenu">
-                        <a tabindex="0" href="#Experience">Experience</a>
-                        <ul class="submenu">
-                            <li class="subitem"><a href="#Skills">Skills</a></li>
-                            <li class="subitem">
-                                <a href="#Education">Education</a>
-                            </li>
-                            <li class="subitem">
-                                <a href="#Project">Projects</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="item"><a href="#Contact">Contact</a></li>
 
                 </ul>
             </nav>
@@ -46,290 +32,50 @@
 
         <main>
             <!-- INTRO -->
-            <section class="gradient-story">
-                <h2 class="story">
-                    everyone has a story to tell.</h2>
-
-            </section>
-
-            <section class="intro-block">
-                <h4 class="heres-mine">Here's mine.</h4>
+            <div class="intro">
                 <h4 class="hey-weekday">Hey there!👋 I’m Rita, hope you’re having a good <span
                         class="js-weekday">day</span>.<br><br>
-
-                    I’m a software engineer and former digital project
-                    manager, specialising in front-end development. Born and raised in Portugal, London is the place I
-                    call home.
+            </div>
+            <div class="intro2">
+                I’m an aspiring software engineer and former Agile project
+                manager, specialising in front-end development.
                 </h4>
-            </section>
+            </div>
 
-            <!-- ABOUT -->
-            <section id="About">
-                <h3 class="block-about">About</h3>
-                <img src="" <div class="block-of-text">
-                <h4>
-                    After graduating in 2008 with a degree in
-                    <a href="https://www.ua.pt/en/course/41" target="_blank">Communication Sciences and
-                        Technology</a>, I didn’t
-                    know
-                    which path to take.
-                </h4>
-                <p>
-                    My education gave me solid foundations of
-                    coding, user-centered design and computer science
-                    fundamentals.
-                </p>
 
-                <h4>I managed to funnel both my logical and creative thinking into Project Management.</h4>
-                <p>Helping brands, designers and developers ship digital experiences, I led projects from initial
-                    briefing to
-                    launch
-                    day and beyond, with direct responsibility for day-to-day management of process, budget and
-                    workflows.
-                </p>
+            <h4 class="intro3">This is just a holding page, so come back in a few weeks time.</h4>
+            </h4>
 
-                <p>
-                    My interpersonal skills,
-                    <strong>Agile</strong> methodologies and contingency
-                    planning enabled me to work with clients such as
-                    Burberry, Morrisons, Now TV (Sky), handling budgets up
-                    to £1 million. </p>
-
-                <p>However, I missed coding and being
-                    hands-on.
-                </p>
-
-                <h4>
-                    In 2020, I decided to brush up on my programming skills
-                    and started coding again.
-                </h4>
-
-                <p>
-                    I refreshed my <strong>HTML</strong> and
-                    <strong>CSS</strong> knowledge, learned
-                    <strong>JavaScript</strong> as well as
-                    <strong>Git</strong>, <strong>GitHub</strong> and
-                    command line. Soon I realised I was on a path to change career. I quit my job and enrolled on a
-                    coding
-                    bootcamp by
-                    <a href="https://generalassemb.ly/education/javascript-development/london" target="_blank">General
-                        Assembly</a>
-                    to further upskill and deepen my knowledge.</p>
-
-                <p>Always eager to learn new technologies and jumping onto
-                    new challenges, I’m
-                    currently learning <strong>React</strong> and
-                    <strong>TypeScript</strong>.
-                </p>
     </div>
-    </section>
-
-    <!-- EXPERIENCE -->
-    <section id="Experience">
-        <article>
-            <h3 class="block-experience">Experience.</h3>
-            <h3 class="title">Work.</h3>
-            <ul>
-                <li>2021 - Who knows?😉</li>
-                <li>2020 - <a href="https://generalassemb.ly/" target="_blank">General Assembly</a> / JavaScript
-                    Development
-                    student</li>
-                <li> 2018 - 2020 <a href="https://www.hearst.co.uk/brands" target="_blank">Hearst UK</a> /
-                    Project Manager,
-                    Operations: Now TV, Guerlain</li>
-                <li> 2017 - 2018 <a href="https://www.rapp.com/" target="_blank">RAPP UK (Omnicom)</a> / Global
-                    Production
-                    Manager:
-                    Burberry, MontBlanc</li>
-                <li> 2014 - 2016 <a href="https://groceries.morrisons.com/" target="_blank">Morrisons</a> /
-                    Digital Project
-                    Manager</li>
-                <li> 2013 - 2014 Various freelance contracts /
-                    Digital Project Manager </li>
-                <li> 2012 - 2014 <a href="https://my.morrisons.com/" target="_blank">Morrisons</a> / Digital
-                    Project Manager
-                </li>
-                <li> 2012 - <a href="https://www.linkedin.com/company/candi-london/" target="_blank">Candi
-                        London</a> / Junior
-                    Digital Project
-                    Manager</li>
-                <li> 2010 - 2011 - <a href="https://www.business1.com/partner/wecansell-pt" target="_blank">Wecansell
-                        Creative
-                        Agency</a> / Brand
-                    Manager & Creative Consultant (Lisbon,
-                    Portugal)</li>
-                <li> 2009 - 2010 - Fixmotion Productions / Digital Marketing
-                    (Lisbon, Portugal)</li>
-            </ul>
-        </article>
-
-        <article>
-            <h3 id="Skills" class="title">Skills.</h3>
-            <div class="grid">
-                <div class="grid-item">
-                    <ul>
-                        <li>JavaScript</li>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>React (learning)</li>
-                        <li>TypeScript (learning)</li>
-                    </ul>
-                </div>
-                <div class="grid-item">
-                    <ul>
-                        <li>Git</li>
-                        <li>GitHub</li>
-                        <li>Node.js</li>
-                        <li>CLI</li>
-                </div>
-                <div class="grid-item">
-                    <ul>
-                        <li>Firebase</li>
-                        <li>Heroku</li>
-                        <li>Netlify</li>
-                    </ul>
-                </div>
-                <div class="grid-item">
-                    <ul>
-                        <li>JIRA</li>
-                        <li>Confluence</li>
-                        <li>Agile Project Management</li>
-                        <li>Design Principles</li>
-                        <li>Stakeholder Relationship and Team
-                            Leadership</li>
-                    </ul>
-                </div>
-            </div>
-        </article>
-
-        <article>
-            <h3 id="Education" class="title">Education.</h3>
-            <ul>
-                <li>2020 - <a href="https://generalassemb.ly/education/javascript-development/london"
-                        target="_blank">JavaScript
-                        Development, General
-                        Assembly</a></li>
-                <li>2005-2008 - <a href="https://www.ua.pt/en/course/41" target="_blank">New Communication
-                        Technologies,
-                        Aveiro University</a></li>
-                <li>2020 - <a href="https://www.freecodecamp.org/certification/ritacorreia/responsive-web-design"
-                        target="_blank">
-                        Responsive Web Design certification,
-                        FreeCodeCamp</a></li>
-                <li>2020 - <a href="https://frontendmasters.com/bootcamp/" target="_blank">Front-end Development
-                        Bootcamp,
-                        Frontend
-                        Masters</a></li>
-                <li>2017 - <a
-                        href="https://www.youracclaim.com/badges/a60afc18-e3f2-4182-84b1-0912e0890b1d/linked_in_profile"
-                        target="_blank">AgilePM&reg;
-                        certification</a></li>
-                <li>2017 - <a href="https://www.udemy.com/certificate/UC-V5Z37HCH/" target="_blank">JIRA
-                        certification</a></li>
-                <li>2019 - <a href="https://rita-correia.netlify.app/docs/PRINCE2_Certificate.pdf">PRINCE2&reg;
-                        Project Management certification</a></li>
-                <li>2019 - <a href="https://www.mhaw.uk.com/" target="_blank">Mental Health At Work training
-                        certification</a></li>
-            </ul>
-        </article>
-
-        <article>
-            <h3 id="Projects" class="title">Projects.</h3>
-            <p>Showcase of non-commercial projects</p>
-            <div>
-                <h4>Polutto:</h4>
-                <p>
-                    An air pollution app that lets you accurately
-                    explore worldwide air quality. Air quality API
-                    which is connected to the largest network of air
-                    sensors.
-                </p>
-                <h4>StreetChecker:</h4>
-                <p>
-                    Fetching real data from Police API, it lets you
-                    search crime incidence by postcode. I worked on
-                    the CSS styling. Design by João Miranda.
-                </p>
-                <h4>Zombie, the Slack Bot:</h4>
-                <p>
-                    A brain-eating Slack bot, built as part of my
-                    General Assembly bootcamp.
-                </p>
-                <h4>Meowlicious:</h4>
-                <p>
-                    A fun library of cat breeds. API calls to Cat
-                    API, DOM manipulation, vanilla JavaScript.
-                </p>
-                <h4>Drawing pad:</h4>
-                <p>HTML5 Canvas, CSS and vanilla JavaScript.</p>
-                <h4>Rock, Paper Scissors Game</h4>
-                <h4>MadLibs Game</h4>
-            </div>
-        </article>
-    </section>
 
     <!-- CONTACT -->
     <section id="Contact">
-        <div class="block-contact">
-            <h3>Contact.</h3>
-        </div>
 
-        <div class="contact-container">
-            <div class="row">
-                <div class="contact-column-left">
-                    <h1>Get in touch.</h1>
-                    <p>I'm looking for an entry-level role in tech with mentorship and room to grow.</p>
-                    <p>If you think I’d be a good fit for your team, drop me a line and let’s chat.</p>
-                </div>
-                <div class="contact-column-right">
-                    <ul>
-                        <li>
-                            <a href="mailto:rita@ritacorreia.co"><i class="fas fa-envelope"></i></a>Email: <a
-                                href="mailto:rita@ritacorreia.co">rita@ritacorreia.co</a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/ritaxcorreia" target="_blank"><i
-                                    class="fab fa-twitter"></i>Twitter</a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/ritaxcorreia"><i
-                                    class="fab fa-linkedin"></i>LinkedIn</a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/ritaxcorreia" target="_blank"><i
-                                    class="fab fa-github"></i>Github</a>
-                        </li>
-                        <li>
-                            <a href="https://codepen.io/ritacorreia" target="_blank"><i
-                                    class="fab fa-codepen"></i>CodePen</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        <h1 class="contact">Get in touch.</h1>
+        <ul class="icon-links">
+            <li>
+                <a href="mailto:rita@ritacorreia.co"><i class="fas fa-envelope"></i></a> Email:
+                <a href="mailto:rita@ritacorreia.co">rita@ritacorreia.co</a>
+            </li>
+            <li>
+                <a href="https://twitter.com/ritaxcorreia" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/ritaxcorreia"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/ritaxcorreia" target="_blank"><i class="fab fa-github"></i> Github</a>
+            </li>
+            <li>
+                <a href="https://codepen.io/ritacorreia" target="_blank"><i class="fab fa-codepen"></i> CodePen</a>
+            </li>
+        </ul>
+
     </section>
     </main>
 
     <footer class="page-footer">
-        <small> &copy;2020 Rita Correia </small>
-        <ul>
-            <li>
-                <a href="https://twitter.com/ritaxcorreia" target="_blank">
-                    <i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/ritaxcorreia" target="_blank"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-                <a href="https://github.com/ritaxcorreia" target="_blank"><i class="fab fa-github"></i></a>
-            </li>
-            <li>
-                <a href="https://codepen.io/ritacorreia" target="_blank"><i class="fab fa-codepen"></i></a>
-            </li>
-            <li>
-                <a href="https://dev.to/ritaxcorreia" target="_blank"><i class="fab fa-dev"></i></a>
-            </li>
-        </ul>
+
     </footer>
     </div>
 
