--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
 
-            <h4 class="intro3">This is just a holding page, so come back in a few weeks time.</h4>
+            <h4 class="intro3">This is just a holding page, so come back in a few weeks' time.</h4>
             </h4>
 
     </div>
