--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             <!-- INTRO -->
             <div class="intro">
                 <h4 class="hey-weekday">Hey there!👋 I’m Rita, hope you’re having a good <span
-                        class="js-weekday">day</span>.<br><br>
+                        class="js-weekday">day</span>.<br><br></h4>
             </div>
             <div class="intro2">
-                I’m an aspiring software engineer and former Agile project
-                manager, specialising in front-end development.
-                </h4>
+                <p>
+                    I’m an aspiring software engineer and former Agile project
+                    manager, specialising in front-end development.
+                </p>
             </div>
 
 
             <h4 class="intro3">This is just a holding page, so come back in a few weeks' time.</h4>
-            </h4>
 
     </div>
 
