--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href="https://www.linkedin.com/in/ritaxcorreia"><i class="fab fa-linkedin"></i> LinkedIn</a>
             </li>
             <li>
-                <a href="https://github.com/ritaxcorreia" target="_blank"><i class="fab fa-github"></i> Github</a>
+                <a href="https://github.com/ritaxcorreia" target="_blank"><i class="fab fa-github"></i> GitHub</a>
             </li>
             <li>
                 <a href="https://codepen.io/ritacorreia" target="_blank"><i class="fab fa-codepen"></i> CodePen</a>
